[package]
name = "vassal"
version = "0.1.0"
authors = ["Tristan Isham <tristan@isham.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "2.0.0"
reqwest = "0.11.4"
dirs = "3.0.2"
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
